add full-pie demo

--- a/index.html
+++ b/index.html
@@ -135,6 +135,30 @@
             1-month SOR: <span class="item-data" js-item-data>0.64%</span>
         </li>
     </ul>
+    <p>Cool Chart: Full Pie</p>
+    <div class="cool-chart-svg-wrapper">
+        <svg class="cool-chart-svg" id="cool-chart-full-pie-2"></svg>
+        <div class="cool-chart-text">
+            <div class="cool-chart-text-inner">
+                <div class="cool-chart-text-title">Total Payment</div>
+                <div class="cool-chart-text-value">$57,245</div>
+            </div>
+        </div>
+    </div>
+    <ul class="cool-chart-items" id="cool-chart-full-pie-items-2">
+        <li class="cool-chart-data-item" data-cool-chart-index="0" js-cool-chart-data-item>
+            <span class="cool-chart-data-mark cool-chart-full-pie-data-mark" js-cool-chart-data-mark>mark</span>
+            1-month SIBOR: <span class="item-data" js-item-data>0.72%</span>
+        </li>
+        <li class="cool-chart-data-item" data-cool-chart-index="1" js-cool-chart-data-item>
+            <span class="cool-chart-data-mark cool-chart-full-pie-data-mark" js-cool-chart-data-mark>mark</span>
+            3-month SIBOR: <span class="item-data" js-item-data>0.84%</span>
+        </li>
+        <li class="cool-chart-data-item" data-cool-chart-index="2" js-cool-chart-data-item>
+            <span class="cool-chart-data-mark cool-chart-full-pie-data-mark" js-cool-chart-data-mark>mark</span>
+            1-month SOR: <span class="item-data" js-item-data>0.64%</span>
+        </li>
+    </ul>
     <p>&nbsp;</p>
     <p>Cool Chart: Half Pie</p>
     <div class="cool-chart-svg-wrapper">
