adjust rect function

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <p>Cool Chart: Rect</p>
     <svg class="cool-chart-svg" id="cool-chart-rect-1"></svg>
     <ul class="cool-chart-items cool-chart-rect-items" id="cool-chart-rect-items-1">
-        <li class="cool-chart-data-item cool-chart-rect-data-item unchecked" data-cool-chart-index="0" js-cool-chart-data-item>
+        <li class="cool-chart-data-item cool-chart-rect-data-item" data-cool-chart-index="0" js-cool-chart-data-item>
             <span class="cool-chart-data-mark cool-chart-rect-data-mark">mark</span>
             1-month SIBOR: <span class="item-data">0.72%</span>
         </li>
@@ -168,7 +168,7 @@
     <p>&nbsp;</p>
     <p><strong>Part 2. Cool Chart Basic Elements:</strong></p>
     <p>Cool Chart Text</p>
-    <div class="cool-chart-text">
+    <div class="cool-chart-text" style="position:static;">
         <div class="cool-chart-text-inner">
             <div class="cool-chart-text-title">Total Payment</div>
             <div class="cool-chart-text-value">$57,245</div>
