add data-cool-chart-links- for jquery.kdCoolChart.js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p><strong>Part 1. Cool Chart Demos:</strong></p>
     <p>Cool Chart: Full Pie</p>
     <div class="cool-chart-svg-wrapper">
-        <svg class="cool-chart-svg" id="cool-chart-full-pie-1"></svg>
+        <svg class="cool-chart-svg" id="cool-chart-full-pie-1" data-cool-chart-links-items="#cool-chart-full-pie-items-1 [js-cool-chart-data-item]"></svg>
         <div class="cool-chart-text">
             <div class="cool-chart-text-inner">
                 <div class="cool-chart-text-title">Total Payment</div>
@@ -39,7 +39,7 @@
     </ul>
     <p>Cool Chart: Full Pie</p>
     <div class="cool-chart-svg-wrapper">
-        <svg class="cool-chart-svg" id="cool-chart-full-pie-2"></svg>
+        <svg class="cool-chart-svg" id="cool-chart-full-pie-2" data-cool-chart-links-items="#cool-chart-full-pie-items-2 [js-cool-chart-data-item]"></svg>
         <div class="cool-chart-text">
             <div class="cool-chart-text-inner">
                 <div class="cool-chart-text-title">Total Payment</div>
@@ -64,7 +64,7 @@
     <p>&nbsp;</p>
     <p>Cool Chart: Half Pie</p>
     <div class="cool-chart-svg-wrapper">
-        <svg class="cool-chart-svg cool-chart-svg-half-pie" id="cool-chart-half-pie-1"></svg>
+        <svg class="cool-chart-svg cool-chart-svg-half-pie" id="cool-chart-half-pie-1" data-cool-chart-links-items="#cool-chart-half-pie-items-1 [js-cool-chart-data-item]"></svg>
         <div class="cool-chart-text cool-chart-half-pie-text">
             <div class="cool-chart-text-inner">
                 <div class="cool-chart-text-value">$57,245</div>
@@ -84,7 +84,7 @@
     </ul>
     <p>&nbsp;</p>
     <p>Cool Chart: Line</p>
-    <svg class="cool-chart-svg" id="cool-chart-line-1"></svg>
+    <svg class="cool-chart-svg" id="cool-chart-line-1" data-cool-chart-links-items="#cool-chart-line-items-1 [js-cool-chart-data-item]" data-cool-chart-links-popup="#cool-chart-line-popup-1" data-cool-chart-links-popup-items="[js-cool-chart-data-item]"></svg>
     <ul class="cool-chart-items cool-chart-line-items" id="cool-chart-line-items-1">
         <li class="cool-chart-data-item cool-chart-line-data-item" data-cool-chart-index="0" js-cool-chart-data-item>
             <span class="cool-chart-data-mark cool-chart-line-data-mark">mark</span>
@@ -126,7 +126,7 @@
     </div>
     <p>&nbsp;</p>
     <p>Cool Chart: Rect</p>
-    <svg class="cool-chart-svg" id="cool-chart-rect-1"></svg>
+    <svg class="cool-chart-svg" id="cool-chart-rect-1" data-cool-chart-links-items='#cool-chart-rect-items-1 [js-cool-chart-data-item]' data-cool-chart-links-popup='#cool-chart-rect-popup-1' data-cool-chart-links-popup-items='[js-cool-chart-data-item]'></svg>
     <ul class="cool-chart-items cool-chart-rect-items" id="cool-chart-rect-items-1">
         <li class="cool-chart-data-item cool-chart-rect-data-item" data-cool-chart-index="0" js-cool-chart-data-item>
             <span class="cool-chart-data-mark cool-chart-rect-data-mark">mark</span>
