adjust half-pie demo style

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <p>&nbsp;</p>
     <p>Cool Chart: Half Pie</p>
     <div class="cool-chart-svg-wrapper">
-        <svg class="cool-chart-svg cool-chart-svg-half-pie" id="cool-chart-half-pie-1" data-cool-chart-links-items="#cool-chart-half-pie-items-1 [js-cool-chart-data-item]"></svg>
+        <svg class="cool-chart-svg cool-chart-svg-half-pie" id="cool-chart-half-pie-1" data-cool-chart-links-items="#cool-chart-half-pie-items-1 [js-cool-chart-data-item]" style="height:175px !important;"></svg>
         <div class="cool-chart-text cool-chart-half-pie-text">
             <div class="cool-chart-text-inner">
                 <div class="cool-chart-text-value">$57,245</div>
